--- a/gpt2/translate.ipynb
+++ b/gpt2/translate.ipynb
@@ -99,11 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "input_file = './gpt2/dataset/alzhemer/alzhemer.csv' \n",
-    "start_idx = 1\n",
-    "end_idx = 18000\n",
-    "output_file = 'translated_alzhemer.xlsx' \n",
-    "translate_csv(input_file, output_file, start_idx=start_idx, end_idx=end_idx)"
+    "translate_csv('./dataset/alzhemer/alzhemer.csv', './dataset/alzhemer/translated_alzhemer.xlsx', start_idx=1, end_idx=18000)"
    ]
   }
  ],
